# fastapi

./: README.md  alembic.ini  db.sqlite  docker-compose.env  docker-compose.yaml  fast.db  main.py  models.py  pyproject.toml
alembic/versions/: 02b35f201ddb_create_users_table.py  67fdd0ea4958_create_comments_tabel.py  aae13ecb6f26_create_todo_table.py
migrations/: env.py
migrations/versions/: 2f4a48af6faa_adds_post_comments_relatioship.py  62464c0a4a9f_create_user_table_and_adds_a_.py  6ca16ca35046_create_post_table.py  a7b576c9499d_create_post_user_comment_tables.py
src/: database.py  main.py  models.py  settings.py
src/api/: deps.py  main.py
src/api/modules/: main.py  models.py
src/api/modules/comments/: models.py  routers.py
src/api/modules/posts/: models.py  routers.py
src/api/modules/users/: crud.py  models.py  routers.py
src/api/routes/: todos.py
src/core/: security.py
src/database/: session.py
