[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.14.0",
  "fastapi[standard]>=0.115.6",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.7.0",
  "pyjwt>=2.10.1",
  "sqlalchemy>=2.0.36",
  "sqlmodel>=0.0.22",
]
